--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <label for="user">User:</label>
+      <input type="text" id="user" name="user" placeholder="user">
+      <label for="duration">Duration:</label>
+      <input type="number" id="duration" name="duration" placeholder="hours">
       <input type="submit" value="Create New Task">
     </form>
 
